Fixing vertical alignment of baseline on version_switcher

--- a/guides/assets/stylesrc/_main.scss
+++ b/guides/assets/stylesrc/_main.scss
@@ -436,6 +436,7 @@ body.guide {
           @include media('>desktop') {
             display: inline-block;
             margin-left: 0.5em;
+            vertical-align: 1px;
           }
 
           select {
